force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Bugs_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Bugs_to_Fix__c</fullName>
    <description>Explain if Total Number of Bugs to Fix exceeds maximum 1 per Full-Time Developer</description>
    <inlineHelpText>Explain if Total Number of Bugs to Fix exceeds maximum 1 per Full-Time Developer</inlineHelpText>
    <label>Explain Bugs to Fix</label>
    <type>TextArea</type>
</CustomField>