force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Bugs_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Bugs_to_Verify__c</fullName>
    <description>Explain if Total Number of Fixed Bugs to Verify exceeds maximum 1 per Full-Time QE</description>
    <inlineHelpText>Explain if Total Number of Fixed Bugs to Verify exceeds maximum 1 per Full-Time QE</inlineHelpText>
    <label>Explain Bugs to Verify</label>
    <type>TextArea</type>
</CustomField>