force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_High__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_High__c</fullName>
    <label>Explain High Risk Perf Features</label>
    <type>TextArea</type>
</CustomField>