force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_Biz_Sox_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Biz_Sox_Not_Met__c</fullName>
    <label>Explain if Biz SOX Not Met</label>
    <type>TextArea</type>
</CustomField>