force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_Blocking_Bugs_Exist_on_Freeze__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Blocking_Bugs_Exist_on_Freeze__c</fullName>
    <label>Explain if Blocking Bugs Exist on Freeze</label>
    <type>TextArea</type>
</CustomField>