force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_bugs_not_trending_down__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_bugs_not_trending_down__c</fullName>
    <description>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
    <inlineHelpText>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
    <label>Explain if Bugs not Trending Down</label>
    <type>TextArea</type>
</CustomField>