force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_count_is_high__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_count_is_high__c</fullName>
    <description>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
    <inlineHelpText>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
    <label>Explain if Count is High</label>
    <type>TextArea</type>
</CustomField>