force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_not_Behind_a_Perm_or_Equiv__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_not_Behind_a_Perm_or_Equiv__c</fullName>
    <description>No team should put the release at risk – Any Feature or change that is large enough or invasive enough to risk the release is behind a permission or equivalent safety valve (Yes/No)</description>
    <inlineHelpText>No team should put the release at risk – Any Feature or change that is large enough or invasive enough to risk the release is behind a permission or equivalent safety valve (Yes/No)</inlineHelpText>
    <label>Explain if not Behind a Perm or Equiv</label>
    <type>TextArea</type>
</CustomField>