force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_Not_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Not_Complete__c</fullName>
    <label>Explain if Not Complete</label>
    <type>TextArea</type>
</CustomField>