force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_PerfEng_Requirements_not_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_PerfEng_Requirements_not_Met__c</fullName>
    <label>Explain if PerfEng Requirements not Met</label>
    <type>TextArea</type>
</CustomField>