force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_Scripts_not_Verified__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Scripts_not_Verified__c</fullName>
    <label>Explain if Scripts not Verified</label>
    <type>TextArea</type>
</CustomField>