force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_Solution_Swimlanes_not_Built__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Solution_Swimlanes_not_Built__c</fullName>
    <label>Explain if Solution Swimlanes not Built</label>
    <type>TextArea</type>
</CustomField>