force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_TF_Count_is_High__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_TF_Count_is_High__c</fullName>
    <label>Explain if TF Count is High</label>
    <type>TextArea</type>
</CustomField>