force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_if_TF_not_Trending_Down__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_TF_not_Trending_Down__c</fullName>
    <description>Explain if the Test Failure rate is not trending downward.</description>
    <inlineHelpText>Explain if the Test Failure rate is not trending downward.</inlineHelpText>
    <label>Explain if TF not Trending Down</label>
    <type>TextArea</type>
</CustomField>