force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_IT_Compliance_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_IT_Compliance_Not_Met__c</fullName>
    <description>IT Feature Freeze Criteria to explain any legal, tax, regulatory, regional, business or IT SOX compliance not met or N/A.</description>
    <inlineHelpText>IT Feature Freeze Criteria to explain any legal, tax, regulatory, regional, business or IT SOX compliance not met or N/A.</inlineHelpText>
    <label>Explain IT Compliance Not Met</label>
    <type>TextArea</type>
</CustomField>