force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_IT_Rollback_Plan_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_IT_Rollback_Plan_Incomplete__c</fullName>
    <description>IT Feature Freeze to explain if rollback and contingency plans are not documented, tested or ready for IT VAT and CAB review.</description>
    <inlineHelpText>IT Feature Freeze to explain if rollback and contingency plans are not documented, tested or ready for IT VAT and CAB review.</inlineHelpText>
    <label>Explain IT Rollback Plan Incomplete</label>
    <type>TextArea</type>
</CustomField>