force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_IT_Stage_Environment_not_ready__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_IT_Stage_Environment_not_ready__c</fullName>
    <description>IT Feature Freeze Criteria to explain if the stage environment is not prepared for the Release Sprint/UAT.</description>
    <inlineHelpText>IT Feature Freeze Criteria to explain if the stage environment is not prepared for the Release Sprint/UAT.</inlineHelpText>
    <label>Explain IT Stage Environment not ready</label>
    <type>TextArea</type>
</CustomField>