force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Num_P2_Bugs_TF_to_Fix_Verify__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Num_P2_Bugs_TF_to_Fix_Verify__c</fullName>
    <label>Explain Num P2 Bugs/TF to Fix/Verify</label>
    <type>TextArea</type>
</CustomField>