force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_Feature_Requests__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_Feature_Requests__c</fullName>
    <label>Explain Open Feature Requests</label>
    <type>TextArea</type>
</CustomField>