force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_P012_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_P012_Bugs__c</fullName>
    <inlineHelpText>P012 Bugs = Zero</inlineHelpText>
    <label>Explain Open P012 Bugs</label>
    <type>TextArea</type>
</CustomField>