force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_RCA_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_RCA_Bugs__c</fullName>
    <inlineHelpText>All P0,1,2 Bugs from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
    <label>Explain Open RCA Bugs</label>
    <type>TextArea</type>
</CustomField>