force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_RCA_Stories__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_RCA_Stories__c</fullName>
    <inlineHelpText>All User-stories from RCAs older than 1 month, must be closed or scheduled for a release or sprint</inlineHelpText>
    <label>Explain Open RCA Stories</label>
    <type>TextArea</type>
</CustomField>