force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_Regression__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_Regression__c</fullName>
    <inlineHelpText>Regressions = Zero</inlineHelpText>
    <label>Explain Open Regression</label>
    <type>TextArea</type>
</CustomField>