force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_TF_1_Week__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_TF_1_Week__c</fullName>
    <inlineHelpText>TF &gt; 1 Week = Zero {Inc Flappers}</inlineHelpText>
    <label>Explain Open TF &gt; 1 Week {Inc Flappers}</label>
    <type>TextArea</type>
</CustomField>