force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Open_TF__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_TF__c</fullName>
    <inlineHelpText>TF on basic ftest, basic selenium &amp; utest = Zero
(Does not inc Flappers)</inlineHelpText>
    <label>Explain Open TF&apos;s</label>
    <type>TextArea</type>
</CustomField>