force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_P0_Blocking_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_P0_Blocking_Bugs__c</fullName>
    <description>Explain if P0/Blocking Bugs are &gt; 0</description>
    <inlineHelpText>Explain if P0/Blocking Bugs are &gt; 0</inlineHelpText>
    <label>Explain Your P0/Blocking Bugs</label>
    <type>TextArea</type>
</CustomField>