force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_P0_Bugs_at_FF__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_P0_Bugs_at_FF__c</fullName>
    <description>IT Feature Freeze Criteria for teams to provide explanation for any open P0 bugs at FF.</description>
    <inlineHelpText>Provide an explanation for any open P0 bugs at FF.</inlineHelpText>
    <label>Explain P0 Bugs at FF</label>
    <type>TextArea</type>
</CustomField>