force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Explain_Sprint_DOD_Criteria__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Sprint_DOD_Criteria__c</fullName>
    <inlineHelpText>If not met, please explain</inlineHelpText>
    <label>Explain Sprint DOD Criteria</label>
    <type>TextArea</type>
</CustomField>