force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Features_behind_perm_disabled__c.field-meta.xml
<CustomField>
    <fullName>agf__Features_behind_perm_disabled__c</fullName>
    <inlineHelpText>Are incomplete features behind a perm and disabled?</inlineHelpText>
    <label>Feature behind perm / disabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>