force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Features_Enabled_by_Retirement_Scripts__c.field-meta.xml
<CustomField>
    <fullName>agf__Features_Enabled_by_Retirement_Scripts__c</fullName>
    <description>Teams should call out any features that will be enabled when the retired scripts are run in the new zero downtime process.</description>
    <inlineHelpText>Call out any features that will be enabled when the retired scripts are run in the new zero downtime process.</inlineHelpText>
    <label>Features Enabled by Retirement Scripts</label>
    <type>TextArea</type>
</CustomField>