force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Features_Enabled_Within_24hrs_of_Relea__c.field-meta.xml
<CustomField>
    <fullName>agf__Features_Enabled_Within_24hrs_of_Relea__c</fullName>
    <inlineHelpText>Teams are required to confirm that all features will be enabled within 24 hrs of the Release</inlineHelpText>
    <label>Features Enabled Within 24hrs of Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <default>true</default>
                <label>True</label>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>