force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Features_with_Perf_Test_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>agf__Features_with_Perf_Test_Outstanding__c</fullName>
    <description>Are remaining features which have not yet completed performance testing, ready to be handed over to Performance Engineering Team?”</description>
    <inlineHelpText>What does it mean to be ready?

•	Test plans are finalized &amp; reviewed.

•	Features with known performance risk are disabled by default (behind perm, config switch)</inlineHelpText>
    <label>Features with Perf Test Outstanding</label>
    <type>TextArea</type>
</CustomField>