force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Freeze_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Freeze_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freeze Type</label>
    <type>Text</type>
</CustomField>