force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__GUS_Signoff_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>agf__GUS_Signoff_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GUS Signoff Confirmed</label>
    <type>Checkbox</type>
</CustomField>