force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__GUS_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__GUS_Signoff_Date__c</fullName>
    <label>GUS Signoff Date</label>
    <type>Date</type>
</CustomField>