force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__IT_Data_Conversion_Plan_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__IT_Data_Conversion_Plan_Complete__c</fullName>
    <description>IT Feature Freeze Criteria to ensure a data conversion plan has been automated, tested, reviewed, validated and potentially performance tuned.</description>
    <inlineHelpText>IT Feature Freeze Criteria to ensure a data conversion plan has been automated, tested, reviewed, validated and potentially performance tuned.</inlineHelpText>
    <label>IT Data Conversion Plan Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>