force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__IT_Infra__c.field-meta.xml
<CustomField>
    <fullName>agf__IT_Infra__c</fullName>
    <description>IT Feature Freeze Criteria to ensure Infrastructure is setup, configured, tested and documented (if required for Apps).</description>
    <inlineHelpText>Infrastructure is setup, configured, tested and documented (if required).</inlineHelpText>
    <label>IT Infra Requirements Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>