force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__IT_Prod_Support_Model_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__IT_Prod_Support_Model_Complete__c</fullName>
    <description>IT Feature Freeze Criteria to ensure a Production Support model has been documented, reviewed and signed off (Tier 1, Tier 2, etc.)</description>
    <inlineHelpText>IT Feature Freeze Criteria to ensure a Production Support model has been documented, reviewed and signed off (Tier 1, Tier 2, etc.)</inlineHelpText>
    <label>IT Prod Support Model Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>