force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__IT_Rollback_Plan_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__IT_Rollback_Plan_Complete__c</fullName>
    <description>IT Feature Freeze Criteria to ensure rollback and contingency plans have been documented, tested and are ready for IT VAT and CAB review.</description>
    <inlineHelpText>IT Feature Freeze Criteria to ensure rollback and contingency plans have been documented, tested and are ready for IT VAT and CAB review.</inlineHelpText>
    <label>IT Rollback Plan Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>