force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__IT_Security_Reviews_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__IT_Security_Reviews_Complete__c</fullName>
    <description>IT Feature Freeze Criteria for all Security reviews, testing and fixes complete.</description>
    <inlineHelpText>Security reviews, testing and fixes complete.</inlineHelpText>
    <label>IT Security Reviews Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>